added the array for the pokemon list
the added array includes the list of 3 pokemons with their name, height and types

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js">
+
+let pokemonList=[
+  {name:"vileplume", height:1.2, type:['grass', 'poison']},
+  {name:"metapod", height:0.7, type:"bug"},
+  {name:"wartortle", height:1, type:"water"}
+];
+
+    </script>
   </body>
 </html>
