--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div id="modal-container"></div>
   <!--<div id="image-container"></div>-->
-
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch-polyfill.js"></script>
   <script src="js/scripts.js"></script>
