--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Simple JS App</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="dist/styles.min.css">
 </head>
 <body>
 
   <nav class="navbar navbar-light bg-success text-dark">
-    <a class="navbar-brand" href="#">POKEDEX Navigation</a>
+    <a class="navbar-brand" href="index.html">POKEDEX Navigation</a>
     <form class="form-inline">
-      <input id = "search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> 
+      <input class="form-control search" type="search" placeholder="Search" aria-label="Search"> 
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </nav>
@@ -50,6 +50,6 @@
     crossorigin="anonymous"></script>
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch-polyfill.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="dist/scripts.min.js"></script>
 </body>
 </html>
