--- a/index.html
+++ b/index.html
@@ -3,53 +3,94 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Simple JS App</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>POKEDEX JS App</title>
+  <link rel="shortcut icon" href="src/img/pokemon-logo-icon.png" type="image/x-icon">
+  <link 
+    rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+    crossorigin="anonymous"
+  />
   <link rel="stylesheet" type="text/css" href="dist/styles.min.css">
 </head>
 <body>
-
   <nav class="navbar navbar-light bg-success text-dark">
     <a class="navbar-brand" href="index.html">POKEDEX Navigation</a>
     <form class="form-inline">
-      <input class="form-control search" type="search" placeholder="Search" aria-label="Search"> 
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input 
+        class="form-control search" 
+        type="search" 
+        placeholder="Search" 
+        aria-label="Search"
+      /> 
+      <button 
+        id="btn"
+        class="btn btn-outline-success my-2 my-sm-0" 
+        type="submit"
+        onclick="event.preventDefault()">Search
+      </button>
     </form>
   </nav>
-  
+
   <ul class="pokemon-list list-group"></ul>
 
-  <div class="modal fade" id="pokemonModalContainer" tabindex="-1" role="dialog"
-    aria-labelledby="pokemonModalContainerLabel" aria-hidden="true">
+  <p id="error-message"></p>
+
+  <div 
+    class="modal fade" 
+    id="pokemonModalContainer" 
+    tabindex="-1" 
+    role="dialog"
+    aria-labelledby="pokemonModalContainerLabel" 
+    aria-hidden="true">
+
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="pokemonModalContainerLabel"></h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button 
+            type="button" 
+            class="close" 
+            data-dismiss="modal" 
+            aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body"></div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button 
+            type="button" 
+            class="btn btn-secondary" 
+            data-dismiss="modal">Close
+          </button>
         </div>
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.6.3.min.js"
-    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  <script 
+    src="https://code.jquery.com/jquery-3.6.3.min.js"
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" 
+    crossorigin="anonymous">
+  </script>
+  <script 
+    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    crossorigin="anonymous">
+  </script>
+  <script 
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    crossorigin="anonymous">
+  </script>
+  <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src="js/promise-polyfill.js"></script>
-  <script src="js/fetch-polyfill.js"></script>
-  <script src="dist/scripts.min.js"></script>
+    crossorigin="anonymous">
+  </script>
+  <script src="src/js/promise-polyfill.js"></script>
+  <script src="src/js/fetch-polyfill.js"></script>
+ <!-- <script src="dist/scripts.min.js"></script>-->
+  <script src="src/js/scripts.js"></script>
+
 </body>
 </html>
